WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13265
REGRESSION: Crash in KJS::Bindings::convertValueToNPVariant
https://bugs.webkit.org/show_bug.cgi?id=13265
Summary
REGRESSION: Crash in KJS::Bindings::convertValueToNPVariant
Justin Garcia
Reported
2007-04-03 02:54:58 PDT
Open the latest nightly Goto
http://www.myspace.com/24
Crash: 0 com.apple.JavaScriptCore 0x00160020 KJS::Bindings::convertValueToNPVariant(KJS::ExecState*, KJS::JSValue*, _NPVariant*) + 304 1 com.apple.JavaScriptCore 0x0015e7dc _NPN_InvokeDefault + 252 2 ...orks.movemediaplayer.plugin 0x1934ea03 NPN_InvokeDefault + 119 3 ...orks.movemediaplayer.plugin 0x192f1e3a nsPluginInstance::init(_NPWindow*) + 304 4 ...orks.movemediaplayer.plugin 0x1930e0fb NPP_Destroy + 251 5 ...orks.movemediaplayer.plugin 0x1930e281 NPP_SetWindow + 103 6 com.apple.WebKit 0x003139e0 -[WebBaseNetscapePluginView setWindowIfNecessary] + 128 ...
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2007-04-03 06:17:32 PDT
<
rdar://problem/5107534
>
Anders Carlsson
Comment 2
2007-04-03 18:49:21 PDT
Committed revision 20695.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug