JavaScriptCore:

Reviewed by Adam.

        <rdar://problem/5107534>
        http://bugs.webkit.org/show_bug.cgi?id=13265
        REGRESSION: Crash in KJS::Bindings::convertValueToNPVariant

        * bindings/NP_jsobject.cpp:
        (_NPN_InvokeDefault):
        Return false if the object isn't a function.

LayoutTests:

        Reviewed by Adam.

        <rdar://problem/5107534>
        http://bugs.webkit.org/show_bug.cgi?id=13265
        REGRESSION: Crash in KJS::Bindings::convertValueToNPVariant

        * plugins/netscape-invoke-default.html:
        Test calling NPN_InvokeDefault on an object that isn't a function.



Canonical link: https://commits.webkit.org/17354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20695 268f45cc-cd09-0410-ab3c-d52691b4dbfc